[package]
name = "nx-cache-server"
version = "0.1.0"
edition = "2021"

# AWS binary
[[bin]]
name = "nx-cache-aws"
path = "src/bin/aws.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
subtle = "2.5"
aws-sdk-s3 = "1.0"
