[package]
name = "nx-cache-server"
version = "0.1.0"
edition = "2021"

# AWS binary
[[bin]]
name = "nx-cache-aws"
path = "src/bin/aws.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "io-util", "macros"] }
tokio-stream = "0.1"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
thiserror = "1.0"
subtle = "2.5"
aws-config = { version = "1.0", default-features = false }
aws-sdk-s3 = { version = "1.0", default-features = false, features = ["rt-tokio", "default-https-client"] }

[profile.release]
strip = true         # Remove all symbols
lto = true           # Link-time optimization  
codegen-units = 1    # Better optimization
panic = "abort"      # Don't include unwinding code
